# vllm-test

./: .gitignore  README.md
docs/benchmark/: otel_file_traces.md  qwen35_enable_mm_embeds_perf_report.md  qwen35_mm_bs_benchmark.md
docs/benchmark/assets/qwen35_enable_mm_embeds/: mm_embeds_omp8_bs2_timeline.html  mm_embeds_omp8_bs4_timeline.html  raw_omp8_bs2_timeline.html  raw_omp8_bs4_timeline.html
docs/model/: qwen3_5_multimodal_forward.md
outputs/: README.md
qwen35_vllm_plugin/: PLUGIN_FLOW.md  README.md  pyproject.toml
qwen35_vllm_plugin/qwen35_vllm_plugin/: __init__.py  model.py
scripts/: analyze_qwen35_bs_sweep.py  analyze_qwen35_timeline.py  benchmark_qwen35_mm.py  benchmark_qwen35_mm_merged_request.py  offline_infer.py  otel_file_collector.yaml  prepare_qwen35_dataset_from_alpamayo.py  render_qwen35_request_timeline.py  run_otel_file_collector.sh  run_qwen35_plugin.sh
